--- a/NLP_&_Text_Mining.ipynb
+++ b/NLP_&_Text_Mining.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Data Science Essentials Day 5:NLP & Text Mining.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
@@ -58,7 +57,8 @@
         "#Read the data from multiple sources\n",
         "#a. PDF Documents\n",
         "#b. Scanned Document/Camtasia Recorder (Whatsapp)\n",
-        "#c. Audio Files\n"
+        "#c. Audio Files\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
